parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> INT ID SEMICOLON
Rule 5     statement -> FLOAT ID SEMICOLON
Rule 6     statement -> ID ASSIGN expression SEMICOLON
Rule 7     statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 8     statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 9     statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 10    statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 11    statement -> READ LPAREN ID RPAREN SEMICOLON
Rule 12    expression -> expression PLUS term
Rule 13    expression -> expression MINUS term
Rule 14    expression -> expression GT term
Rule 15    expression -> expression LT term
Rule 16    expression -> term
Rule 17    term -> term MULT factor
Rule 18    term -> term DIV factor
Rule 19    term -> factor
Rule 20    factor -> NUMBER
Rule 21    factor -> ID
Rule 22    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ASSIGN               : 6
DIV                  : 18
ELSE                 : 8
FLOAT                : 5
GT                   : 14
ID                   : 4 5 6 11 21
IF                   : 7 8
INT                  : 4
LBRACE               : 7 8 8 9
LPAREN               : 7 8 9 10 11 22
LT                   : 15
MINUS                : 13
MULT                 : 17
NUMBER               : 20
PLUS                 : 12
PRINT                : 10
RBRACE               : 7 8 8 9
READ                 : 11
RPAREN               : 7 8 9 10 11 22
SEMICOLON            : 4 5 6 10 11
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

expression           : 6 7 8 9 10 12 13 14 15 22
factor               : 17 18 19
program              : 0
statement            : 2 3
statement_list       : 1 3 7 8 8 9
term                 : 12 13 14 15 16 17 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . ID ASSIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (9) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . READ LPAREN ID RPAREN SEMICOLON

    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    ID              shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    READ            shift and go to state 10

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . ID ASSIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (9) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . READ LPAREN ID RPAREN SEMICOLON

    $end            reduce using rule 1 (program -> statement_list .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    ID              shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    READ            shift and go to state 10

    statement                      shift and go to state 11

state 3

    (2) statement_list -> statement .

    INT             reduce using rule 2 (statement_list -> statement .)
    FLOAT           reduce using rule 2 (statement_list -> statement .)
    ID              reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    READ            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> INT . ID SEMICOLON

    ID              shift and go to state 12


state 5

    (6) statement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 13


state 6

    (5) statement -> FLOAT . ID SEMICOLON

    ID              shift and go to state 14


state 7

    (7) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 15


state 8

    (9) statement -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 16


state 9

    (10) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 17


state 10

    (11) statement -> READ . LPAREN ID RPAREN SEMICOLON

    LPAREN          shift and go to state 18


state 11

    (3) statement_list -> statement_list statement .

    INT             reduce using rule 3 (statement_list -> statement_list statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement_list statement .)
    ID              reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 3 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 3 (statement_list -> statement_list statement .)
    READ            reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 12

    (4) statement -> INT ID . SEMICOLON

    SEMICOLON       shift and go to state 19


state 13

    (6) statement -> ID ASSIGN . expression SEMICOLON
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (14) expression -> . expression GT term
    (15) expression -> . expression LT term
    (16) expression -> . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    expression                     shift and go to state 21
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 14

    (5) statement -> FLOAT ID . SEMICOLON

    SEMICOLON       shift and go to state 26


state 15

    (7) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (14) expression -> . expression GT term
    (15) expression -> . expression LT term
    (16) expression -> . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    expression                     shift and go to state 27
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 16

    (9) statement -> WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (14) expression -> . expression GT term
    (15) expression -> . expression LT term
    (16) expression -> . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    expression                     shift and go to state 28
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 17

    (10) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (14) expression -> . expression GT term
    (15) expression -> . expression LT term
    (16) expression -> . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    expression                     shift and go to state 29
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 18

    (11) statement -> READ LPAREN . ID RPAREN SEMICOLON

    ID              shift and go to state 30


state 19

    (4) statement -> INT ID SEMICOLON .

    INT             reduce using rule 4 (statement -> INT ID SEMICOLON .)
    FLOAT           reduce using rule 4 (statement -> INT ID SEMICOLON .)
    ID              reduce using rule 4 (statement -> INT ID SEMICOLON .)
    IF              reduce using rule 4 (statement -> INT ID SEMICOLON .)
    WHILE           reduce using rule 4 (statement -> INT ID SEMICOLON .)
    PRINT           reduce using rule 4 (statement -> INT ID SEMICOLON .)
    READ            reduce using rule 4 (statement -> INT ID SEMICOLON .)
    $end            reduce using rule 4 (statement -> INT ID SEMICOLON .)
    RBRACE          reduce using rule 4 (statement -> INT ID SEMICOLON .)


state 20

    (21) factor -> ID .

    MULT            reduce using rule 21 (factor -> ID .)
    DIV             reduce using rule 21 (factor -> ID .)
    SEMICOLON       reduce using rule 21 (factor -> ID .)
    PLUS            reduce using rule 21 (factor -> ID .)
    MINUS           reduce using rule 21 (factor -> ID .)
    GT              reduce using rule 21 (factor -> ID .)
    LT              reduce using rule 21 (factor -> ID .)
    RPAREN          reduce using rule 21 (factor -> ID .)


state 21

    (6) statement -> ID ASSIGN expression . SEMICOLON
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term
    (14) expression -> expression . GT term
    (15) expression -> expression . LT term

    SEMICOLON       shift and go to state 31
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35


state 22

    (16) expression -> term .
    (17) term -> term . MULT factor
    (18) term -> term . DIV factor

    SEMICOLON       reduce using rule 16 (expression -> term .)
    PLUS            reduce using rule 16 (expression -> term .)
    MINUS           reduce using rule 16 (expression -> term .)
    GT              reduce using rule 16 (expression -> term .)
    LT              reduce using rule 16 (expression -> term .)
    RPAREN          reduce using rule 16 (expression -> term .)
    MULT            shift and go to state 36
    DIV             shift and go to state 37


state 23

    (19) term -> factor .

    MULT            reduce using rule 19 (term -> factor .)
    DIV             reduce using rule 19 (term -> factor .)
    SEMICOLON       reduce using rule 19 (term -> factor .)
    PLUS            reduce using rule 19 (term -> factor .)
    MINUS           reduce using rule 19 (term -> factor .)
    GT              reduce using rule 19 (term -> factor .)
    LT              reduce using rule 19 (term -> factor .)
    RPAREN          reduce using rule 19 (term -> factor .)


state 24

    (20) factor -> NUMBER .

    MULT            reduce using rule 20 (factor -> NUMBER .)
    DIV             reduce using rule 20 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 20 (factor -> NUMBER .)
    PLUS            reduce using rule 20 (factor -> NUMBER .)
    MINUS           reduce using rule 20 (factor -> NUMBER .)
    GT              reduce using rule 20 (factor -> NUMBER .)
    LT              reduce using rule 20 (factor -> NUMBER .)
    RPAREN          reduce using rule 20 (factor -> NUMBER .)


state 25

    (22) factor -> LPAREN . expression RPAREN
    (12) expression -> . expression PLUS term
    (13) expression -> . expression MINUS term
    (14) expression -> . expression GT term
    (15) expression -> . expression LT term
    (16) expression -> . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    expression                     shift and go to state 38
    term                           shift and go to state 22
    factor                         shift and go to state 23

state 26

    (5) statement -> FLOAT ID SEMICOLON .

    INT             reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    FLOAT           reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    ID              reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    IF              reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    WHILE           reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    PRINT           reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    READ            reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    $end            reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)
    RBRACE          reduce using rule 5 (statement -> FLOAT ID SEMICOLON .)


state 27

    (7) statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (8) statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term
    (14) expression -> expression . GT term
    (15) expression -> expression . LT term

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35


state 28

    (9) statement -> WHILE LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term
    (14) expression -> expression . GT term
    (15) expression -> expression . LT term

    RPAREN          shift and go to state 40
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35


state 29

    (10) statement -> PRINT LPAREN expression . RPAREN SEMICOLON
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term
    (14) expression -> expression . GT term
    (15) expression -> expression . LT term

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35


state 30

    (11) statement -> READ LPAREN ID . RPAREN SEMICOLON

    RPAREN          shift and go to state 42


state 31

    (6) statement -> ID ASSIGN expression SEMICOLON .

    INT             reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    FLOAT           reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    WHILE           reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    PRINT           reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    READ            reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 6 (statement -> ID ASSIGN expression SEMICOLON .)


state 32

    (12) expression -> expression PLUS . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    term                           shift and go to state 43
    factor                         shift and go to state 23

state 33

    (13) expression -> expression MINUS . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    term                           shift and go to state 44
    factor                         shift and go to state 23

state 34

    (14) expression -> expression GT . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    term                           shift and go to state 45
    factor                         shift and go to state 23

state 35

    (15) expression -> expression LT . term
    (17) term -> . term MULT factor
    (18) term -> . term DIV factor
    (19) term -> . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    term                           shift and go to state 46
    factor                         shift and go to state 23

state 36

    (17) term -> term MULT . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    factor                         shift and go to state 47

state 37

    (18) term -> term DIV . factor
    (20) factor -> . NUMBER
    (21) factor -> . ID
    (22) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 24
    ID              shift and go to state 20
    LPAREN          shift and go to state 25

    factor                         shift and go to state 48

state 38

    (22) factor -> LPAREN expression . RPAREN
    (12) expression -> expression . PLUS term
    (13) expression -> expression . MINUS term
    (14) expression -> expression . GT term
    (15) expression -> expression . LT term

    RPAREN          shift and go to state 49
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    GT              shift and go to state 34
    LT              shift and go to state 35


state 39

    (7) statement -> IF LPAREN expression RPAREN . LBRACE statement_list RBRACE
    (8) statement -> IF LPAREN expression RPAREN . LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LBRACE          shift and go to state 50


state 40

    (9) statement -> WHILE LPAREN expression RPAREN . LBRACE statement_list RBRACE

    LBRACE          shift and go to state 51


state 41

    (10) statement -> PRINT LPAREN expression RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 52


state 42

    (11) statement -> READ LPAREN ID RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 53


state 43

    (12) expression -> expression PLUS term .
    (17) term -> term . MULT factor
    (18) term -> term . DIV factor

    SEMICOLON       reduce using rule 12 (expression -> expression PLUS term .)
    PLUS            reduce using rule 12 (expression -> expression PLUS term .)
    MINUS           reduce using rule 12 (expression -> expression PLUS term .)
    GT              reduce using rule 12 (expression -> expression PLUS term .)
    LT              reduce using rule 12 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 12 (expression -> expression PLUS term .)
    MULT            shift and go to state 36
    DIV             shift and go to state 37


state 44

    (13) expression -> expression MINUS term .
    (17) term -> term . MULT factor
    (18) term -> term . DIV factor

    SEMICOLON       reduce using rule 13 (expression -> expression MINUS term .)
    PLUS            reduce using rule 13 (expression -> expression MINUS term .)
    MINUS           reduce using rule 13 (expression -> expression MINUS term .)
    GT              reduce using rule 13 (expression -> expression MINUS term .)
    LT              reduce using rule 13 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 13 (expression -> expression MINUS term .)
    MULT            shift and go to state 36
    DIV             shift and go to state 37


state 45

    (14) expression -> expression GT term .
    (17) term -> term . MULT factor
    (18) term -> term . DIV factor

    SEMICOLON       reduce using rule 14 (expression -> expression GT term .)
    PLUS            reduce using rule 14 (expression -> expression GT term .)
    MINUS           reduce using rule 14 (expression -> expression GT term .)
    GT              reduce using rule 14 (expression -> expression GT term .)
    LT              reduce using rule 14 (expression -> expression GT term .)
    RPAREN          reduce using rule 14 (expression -> expression GT term .)
    MULT            shift and go to state 36
    DIV             shift and go to state 37


state 46

    (15) expression -> expression LT term .
    (17) term -> term . MULT factor
    (18) term -> term . DIV factor

    SEMICOLON       reduce using rule 15 (expression -> expression LT term .)
    PLUS            reduce using rule 15 (expression -> expression LT term .)
    MINUS           reduce using rule 15 (expression -> expression LT term .)
    GT              reduce using rule 15 (expression -> expression LT term .)
    LT              reduce using rule 15 (expression -> expression LT term .)
    RPAREN          reduce using rule 15 (expression -> expression LT term .)
    MULT            shift and go to state 36
    DIV             shift and go to state 37


state 47

    (17) term -> term MULT factor .

    MULT            reduce using rule 17 (term -> term MULT factor .)
    DIV             reduce using rule 17 (term -> term MULT factor .)
    SEMICOLON       reduce using rule 17 (term -> term MULT factor .)
    PLUS            reduce using rule 17 (term -> term MULT factor .)
    MINUS           reduce using rule 17 (term -> term MULT factor .)
    GT              reduce using rule 17 (term -> term MULT factor .)
    LT              reduce using rule 17 (term -> term MULT factor .)
    RPAREN          reduce using rule 17 (term -> term MULT factor .)


state 48

    (18) term -> term DIV factor .

    MULT            reduce using rule 18 (term -> term DIV factor .)
    DIV             reduce using rule 18 (term -> term DIV factor .)
    SEMICOLON       reduce using rule 18 (term -> term DIV factor .)
    PLUS            reduce using rule 18 (term -> term DIV factor .)
    MINUS           reduce using rule 18 (term -> term DIV factor .)
    GT              reduce using rule 18 (term -> term DIV factor .)
    LT              reduce using rule 18 (term -> term DIV factor .)
    RPAREN          reduce using rule 18 (term -> term DIV factor .)


state 49

    (22) factor -> LPAREN expression RPAREN .

    MULT            reduce using rule 22 (factor -> LPAREN expression RPAREN .)
    DIV             reduce using rule 22 (factor -> LPAREN expression RPAREN .)
    SEMICOLON       reduce using rule 22 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 22 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 22 (factor -> LPAREN expression RPAREN .)
    GT              reduce using rule 22 (factor -> LPAREN expression RPAREN .)
    LT              reduce using rule 22 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 22 (factor -> LPAREN expression RPAREN .)


state 50

    (7) statement -> IF LPAREN expression RPAREN LBRACE . statement_list RBRACE
    (8) statement -> IF LPAREN expression RPAREN LBRACE . statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . ID ASSIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (9) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . READ LPAREN ID RPAREN SEMICOLON

    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    ID              shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    READ            shift and go to state 10

    statement_list                 shift and go to state 54
    statement                      shift and go to state 3

state 51

    (9) statement -> WHILE LPAREN expression RPAREN LBRACE . statement_list RBRACE
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . ID ASSIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (9) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . READ LPAREN ID RPAREN SEMICOLON

    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    ID              shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    READ            shift and go to state 10

    statement_list                 shift and go to state 55
    statement                      shift and go to state 3

state 52

    (10) statement -> PRINT LPAREN expression RPAREN SEMICOLON .

    INT             reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    FLOAT           reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    ID              reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    IF              reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    WHILE           reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    PRINT           reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    READ            reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    $end            reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)
    RBRACE          reduce using rule 10 (statement -> PRINT LPAREN expression RPAREN SEMICOLON .)


state 53

    (11) statement -> READ LPAREN ID RPAREN SEMICOLON .

    INT             reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    FLOAT           reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    ID              reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    IF              reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    WHILE           reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    PRINT           reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    READ            reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    $end            reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)
    RBRACE          reduce using rule 11 (statement -> READ LPAREN ID RPAREN SEMICOLON .)


state 54

    (7) statement -> IF LPAREN expression RPAREN LBRACE statement_list . RBRACE
    (8) statement -> IF LPAREN expression RPAREN LBRACE statement_list . RBRACE ELSE LBRACE statement_list RBRACE
    (3) statement_list -> statement_list . statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . ID ASSIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (9) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . READ LPAREN ID RPAREN SEMICOLON

    RBRACE          shift and go to state 56
    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    ID              shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    READ            shift and go to state 10

    statement                      shift and go to state 11

state 55

    (9) statement -> WHILE LPAREN expression RPAREN LBRACE statement_list . RBRACE
    (3) statement_list -> statement_list . statement
    (4) statement -> . INT ID SEMICOLON
    (5) statement -> . FLOAT ID SEMICOLON
    (6) statement -> . ID ASSIGN expression SEMICOLON
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (8) statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (9) statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (10) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (11) statement -> . READ LPAREN ID RPAREN SEMICOLON

    RBRACE          shift and go to state 57
    INT             shift and go to state 4
    FLOAT           shift and go to state 6
    ID              shift and go to state 5
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    PRINT           shift and go to state 9
    READ            shift and go to state 10

    statement                      shift and go to state 11

state 56

    (7) statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE .
    (8) statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE . ELSE LBRACE statement_list RBRACE

    INT             reduce using rule 7 (statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE .)
